# Typewriter

./: .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  README.md  adapters.html  compose.yaml  develop.html  devlog.html  index.html  leave.html  privacy-policy.html  search.html  sitemap.xml
.github/workflows/: build-and-publish-release-jars.yml  build-development-jars-and-publish.yml  build-documentation.yml  build-engine.yml  build-extension.yml  build-jars-on-request.yml  test-building.yml  test-documentation-build.yml
0.4.2/: adapters.html
0.4.2/adapters/: BasicAdapter.html  CitizensAdapter.html  CombatLogXAdapter.html  FancyNpcsAdapter.html  MythicMobsAdapter.html  RPGRegionsAdapter.html  SuperiorSkyblockAdapter.html  VaultAdapter.html  WorldGuardAdapter.html  ZNPCsPlusAdapter.html
0.4.2/develop/: adapters.html  index.html
0.4.2/docs/: adapters.html  advanced.html  dependencies.html  facts.html  first-cinematic.html  first-interaction.html  home.html  installation-guide.html  troubleshooting.html
0.5.1/: adapters.html  develop.html
0.5.1/adapters/: BasicAdapter.html  CitizensAdapter.html  CombatLogXAdapter.html  EntityAdapter.html  FancyNpcsAdapter.html  MythicMobsAdapter.html  RPGRegionsAdapter.html  SuperiorSkyblockAdapter.html  VaultAdapter.html  WorldGuardAdapter.html  ZNPCsPlusAdapter.html
0.5.1/develop/: adapters.html
0.5.1/docs/: concepts.html  getting-started.html  home.html  troubleshooting.html
0.6.1/: adapters.html  develop.html
0.6.1/adapters/: BasicAdapter.html  CitizensAdapter.html  CombatLogXAdapter.html  EntityAdapter.html  FancyNpcsAdapter.html  MythicMobsAdapter.html  RPGRegionsAdapter.html  SuperiorSkyblockAdapter.html  VaultAdapter.html  (+2 more)
0.7.0/: adapters.html  develop.html
adapters/: BasicAdapter.html  CitizensAdapter.html  CombatLogXAdapter.html  EntityAdapter.html  FancyNpcsAdapter.html  MythicMobsAdapter.html  RPGRegionsAdapter.html  SuperiorSkyblockAdapter.html  VaultAdapter.html  WorldGuardAdapter.html  ZNPCsPlusAdapter.html
app/: AGENTS.md  install_flutter_linux.sh  pubspec.yaml
backend/auth/auth-callout/: Cargo.toml  develop.wadm.yaml  wasmcloud.toml
backend/auth/auth-callout/src/: config.rs  jwt.rs  lib.rs
backend/auth/auth-callout/src/issuers/: typewriter.rs
backend/auth/auth-callout/wit/: world.wit
backend/auth/auth-typewriter-permissions/: Cargo.toml  develop.wadm.yaml  wasmcloud.toml
backend/auth/auth-typewriter-permissions/src/: lib.rs
backend/auth/auth-typewriter-permissions/wit/: world.wit
backend/organization/organizations/: Cargo.toml  develop.wadm.yaml  wasmcloud.toml
backend/organization/organizations/src/: lib.rs
backend/organization/organizations/wit/: world.wit
backend/providers/surrealdb/: Cargo.toml  develop.wadm.yaml  wasmcloud.toml
backend/providers/surrealdb/component/: Cargo.toml  README.md  wasmcloud.toml
backend/providers/surrealdb/component/src/: lib.rs
backend/providers/surrealdb/component/wit/: deps.toml  world.wit
backend/providers/surrealdb/src/: config.rs  conversion.rs  main.rs  provider.rs
backend/providers/surrealdb/surrealdb-component/: Cargo.toml  wasmcloud.toml
backend/providers/surrealdb/surrealdb-component/src/: lib.rs
backend/providers/surrealdb/surrealdb-component/wit/: deps.toml  world.wit
backend/providers/surrealdb/wit/: world.wit
beta/: adapters.html  develop.html
develop/: extensions.html
devlog/: 0.3.0-release.html  0.4.0-release.html  0.5.0-release.html  0.6.0-release.html  0.7.0-release.html  archive.html  atom.xml  authors.html  documentation-improvements.html  feed.json  restructured-documentation.html  rss.xml  tags.html  why-i-created-typewriter.html
discord_bot/: Cargo.toml  Dockerfile
docker/: marketplace.compose.yml  nats-server.conf  resolver.conf  sentinel.creds  setup.sh  surrealdb.compose.yml  wasmcloud.compose.yml  wasmcloud.creds
docker/developer-watcher/: Cargo.toml  Dockerfile
docker/developer-watcher/src/: main.rs
docs/: concepts.html  getting-started.html  home.html  troubleshooting.html
documentation/: .gitignore  .npmrc  AGENTS.md  docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  tsconfig.json  versions.json
engine/: AGENTS.md  build.gradle.kts  gradle.properties
extensions/: AGENTS.md  build.gradle.kts
module-plugin/: AGENTS.md  build.gradle.kts
panel/: README.md  pubspec.yaml
(+53406 files in other folders)
