[package]
name = "developer-watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.35", features = ["derive", "env"] }
futures = "0.3.31"
notify = { version = "8.0.0", features = ["serde"] }
notify-debouncer-full = { version = "0.5.0", features = ["serde"] }
notify-debouncer-mini = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["v4"] }
walkdir = "2.5.0"
heck = "0.4.1"
