[package]
name = "auth-typewriter-permissions"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wasmcloud-component = "0.2"
anyhow = "1"
serde_cbor = "0.11"
serde = { version = "1", features = ["derive"] }
jose = { version = "0.0.2", features = ["crypto-rustcrypto"] }
nats-jwt-rs = "0.1"
base64 = "0.22"
surrealdb-component = { version = "0", registry = "seamlezz" }
wasmcloud-utils = { version = "1", registry = "seamlezz" }
