[package]
name = "organizations-component"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde_cbor = "0.11"
serde = { version = "1", features = ["derive"] }
surrealdb-component = { version = "0", registry = "seamlezz" }
wasmcloud-component = "0.2"
wasmcloud-utils = { version = "1", registry = "seamlezz" }
