[package]
name = "surrealdb-provider"
version = "0.1.0"
edition = "2021"
description = """
A provider for SurrealDB
"""

[workspace]

[badges.maintenance]
status = "actively-developed"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.140"
surrealdb = "2.2.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
wasmcloud-provider-sdk = { version = "0.13.0", features = ["otel"] }
wit-bindgen-wrpc = "0.9.0"
