[package]
name = "surrealdb-test-component"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde-content = "0.1.2"
serde_cbor = "0.11.2"
serde_json = "1.0.140"
surrealdb = { version = "2.2.2", default-features = false }
surrealdb-core = { version = "2.2.2", default-features = false }
wit-bindgen = "0.32"
