[package]
name = "surrealdb-test-component"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
wit-bindgen = "0.41"
surrealdb-component = { path = "../surrealdb-component" }
anyhow = "1.0.97"
wasmcloud-component = "0.2.0"
